@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -48,7 +49,7 @@ public class NotificationService {
                         n.getMessage(),
                         n.getCreatedAt()
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void markChatNotificationsAsRead(Long receiverId, Long chatRoomId) {
